# Geodesic-Master-Kernel

./: API.md  BENCHMARKS.md  CONTRIBUTING.md  HARDWARE.md  LICENSE  README.md  SE3-Geodesic-Kernel.cabal  THEORY.md  jitter_test.py  saturation_check.py  stack.yaml
.github/workflows/: ci.yml
bench/: Main.hs
bench/Bench/: Arithmetic.hs  DualQuaternion.hs  Manifold.hs
examples/: consensus-negotiation.hs  dual-agent.hs  simple-agent.hs
playground/: Main.hs
src/Kernel/: Consensus.hs  Core.hs  DualQuaternion.hs  Error.hs  FixedPoint.hs  Geodesic.hs  Manifold.hs
src/Sim/: Physics.hs  Playground.hs
test/integration/: Main.hs
test/integration/Test/: Convergence.hs  HardwareEmulation.hs  Simulation.hs
test/unit/: Main.hs
test/unit/Test/: Consensus.hs  DualQuaternion.hs  FixedPoint.hs  Geodesic.hs  Manifold.hs  Properties.hs
