cabal-version:      3.0
name:               SE3-Geodesic-Kernel
version:            1.0.0.0
synopsis:           Hardware-accelerated SE(3) geodesic flow controller
description:        High-precision SE(3) geodesic kernel with Ricci-flat manifold enforcement
license:            MIT
author:             Development Team
maintainer:         dev@example.com
category:           Physics

library
    exposed-modules:
        Kernel.Core
        Kernel.Error
        Kernel.FixedPoint
        Kernel.DualQuaternion
        Kernel.Manifold
        Kernel.Geodesic
        Kernel.Consensus
        Sim.Playground
        Sim.Physics
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -O2 -threaded
    build-depends:
        base >=4.16,
        deepseq >=1.4.5,
        vector >=0.12.3

executable playground
    main-is:          Main.hs
    hs-source-dirs:   playground
    default-language: Haskell2010
    ghc-options:      -O2 -threaded
    build-depends:
        base >=4.16,
        SE3-Geodesic-Kernel

test-suite unit-tests
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/unit
    default-language: Haskell2010
    ghc-options:      -O2 -threaded
    build-depends:
        base >=4.16,
        SE3-Geodesic-Kernel,
        tasty >=1.4,
        tasty-hunit >=0.10,
        QuickCheck >=2.14

test-suite integration-tests
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test/integration
    default-language: Haskell2010
    ghc-options:      -O2 -threaded
    build-depends:
        base >=4.16,
        SE3-Geodesic-Kernel,
        tasty >=1.4,
        tasty-hunit >=0.10

benchmark performance
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   bench
    default-language: Haskell2010
    ghc-options:      -O2 -threaded
    build-depends:
        base >=4.16,
        SE3-Geodesic-Kernel,
        criterion >=1.5
